<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_title">
        <SeekBarPreference
            app:key="search_bar_height"
            app:title="@string/search_height_title"
            app:summary="@string/search_height_summary"
            android:defaultValue="48"
            android:max="96"
            android:min="36"
            app:showSeekBarValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/import_export">
        <Preference
            app:key="export_csv"
            app:title="@string/export_csv"
            app:summary="@string/export_csv_summary"/>

        <Preference
            app:key="import_csv"
            app:title="@string/import_csv"
            app:summary="@string/import_csv_summary"/>
    </PreferenceCategory>
</PreferenceScreen>