<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/stockFragment">

    <fragment
        android:id="@+id/stockFragment"
        android:name="com.example.warehouse.ui.stock.StockFragment"
        android:label="@string/inventory_title"
        tools:layout="@layout/fragment_stock"/>

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.warehouse.ui.order.OrderFragment"
        android:label="@string/order_title"
        tools:layout="@layout/fragment_order"/>

    <fragment
        android:id="@+id/receiptFragment"
        android:name="com.example.warehouse.ui.receipt.ReceiptFragment"
        android:label="@string/receipt_title"
        tools:layout="@layout/fragment_receipt"/>
</navigation>